--- a/02_CSS/css/06_레이아웃스타일.css
+++ b/02_CSS/css/06_레이아웃스타일.css
@@ -131,3 +131,48 @@
   height: 100px;
   background-color: blue;
 }
+
+/* visibility */
+.visibility {
+  width: 100px;
+  height: 100px;
+  border: 1px solid;
+}
+
+#vis1 {
+  visibility: hidden;
+  /* display:none; */
+  background-color: beige;
+}
+#vis2 {
+  background-color: skyblue;
+}
+
+#z-outer {
+  position: relative;
+  height: 250px;
+}
+
+.z-index {
+  width: 150px;
+  height: 150px;
+  border: 1px solid;
+  position: absolute;
+}
+
+#z-index1 {
+  background-color: orange;
+  top: 100px;
+  left: 100px;
+  z-index: 1;
+}
+#z-index2 {
+  background-color: blueviolet;
+  top: 50px;
+  left: 50px;
+  z-index: 9999;
+}
+#z-index3 {
+  background-color: green;
+  z-index: -1;
+}
