--- a/02_CSS/css/실습문제4.css
+++ b/02_CSS/css/실습문제4.css
@@ -65,10 +65,10 @@ main #section1 h1 {
 
 main .size {
   text-align: center;
-  width: 20px;
-  height: 90px;
+  width: 200px;
+  height: 200px;
   border-radius: 80%;
-  width: 100px;
+  width: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -111,11 +111,20 @@ main #host {
 }
 
 #section2 img {
-  margin-top: 30px;
   width: 300px;
   height: 200px;
 }
 
+#moving {
+  margin-top: 30px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#section3 h1 {
+  font-size: 50px;
+  font-weight: bold;
+}
 #section3 img {
   width: 150px;
   height: 100px;
