--- a/coupang/style.css
+++ b/coupang/style.css
@@ -1,5 +1,6 @@
 :root {
   --main-color: #4285f4;
+  --main-border: 1px solid #eee;
 }
 
 .container {
@@ -135,60 +136,158 @@ header {
 }
 
 /* header - category */
+.category-btn {
+  position: relative;
+}
 .category {
-  background: white;
-  border: 1px solid #eee;
   position: absolute;
-  top: 155px;
-  display: flex;
-  display: none;
+  background: white;
+  border: var(--main-border);
+  top: 121px;
+  left: 0px;
+  color: black;
+  /* display: none; */
+}
+.category-btn:hover .category {
+  display: block;
 }
 .category-list {
-  margin: 10px;
   width: 170px;
+  margin: 5px;
 }
 .category-item {
   display: flex;
-  margin: 20px 0;
-}
-.category-item:hover span {
-  text-decoration: underline;
-}
-.category-item:hover i:last-child {
-  display: inline;
-}
-.category-item:hover {
-  color: var(--main-color);
-}
-.category-item span {
-  flex: 1;
+  padding: 10px 0;
+  position: relative;
 }
 .category-item i:first-child {
   font-size: 1.2rem;
   width: 40px;
   text-align: center;
 }
-.category-item i:last-child {
+.category-item span {
+  flex: 1;
+}
+.category-item i:nth-child(3) {
+  font-size: 1.1rem;
+  padding-right: 10px;
+  display: none;
+}
+.category-item:hover {
+  color: var(--main-color);
+}
+.category-item:hover span {
+  text-decoration: underline;
+}
+.category-item:hover i:nth-child(3) {
+  display: block;
+}
+.category-item:hover .category-sub-item {
+  display: flex;
+}
+.category-sub-item {
+  position: absolute;
+  top: -6px;
+  left: 175px;
+  background: white;
+  display: flex;
+  width: 600px;
+  height: 502px;
+  padding: 5px 10px;
+  border: var(--main-border);
   display: none;
 }
 
-.category-sub {
-  position: relative;
-  display: none;
-  width: 600px;
+.category-sub-item ul {
+  width: 156px;
 }
-.category-sub-item {
-  background-color: white;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: 435px;
-  display: none;
+
+.category-sub-item ul li {
+  padding: 10px 0;
+}
+.category-sub-item ul li:hover a {
+  text-decoration: underline;
+  color: var(--main-color);
 }
 .category-sub-item img {
   position: absolute;
-  width: 450px;
   bottom: 0;
   right: 0;
+  width: 465px;
+}
+
+.category-item:nth-child(2) .category-sub-item {
+  top: -55px;
+}
+.category-item:nth-child(3) .category-sub-item {
+  top: -104px;
+}
+.category-item:nth-child(4) .category-sub-item {
+  top: -153px;
+}
+.category-item:nth-child(5) .category-sub-item {
+  top: -202px;
+}
+.category-item:nth-child(6) .category-sub-item {
+  top: -251px;
+}
+.category-item:nth-child(7) .category-sub-item {
+  top: -300px;
+}
+.category-item:nth-child(8) .category-sub-item {
+  top: -349px;
+}
+
+.category-item:nth-child(9) .category-sub-item {
+  top: -398px;
+}
+
+.category-item:last-child .category-sub-item {
+  top: -447px;
+  display: block;
+}
+
+/* main */
+main img {
+  display: none;
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+}
+
+.main-img-active {
+  display: block;
+}
+
+/* srection : 오늘의 발견 */
+.discovery-list h2 {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-top: 20px;
+}
+
+.discovery-list h2 span {
+  font-size: 0.9rem;
+  font-weight: noraml;
+  color: #333;
+}
+
+.discovery-list-items {
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  border: var(--main-border);
+  padding: 10px;
+}
+
+.discovery-list-items a {
+  border: var(--main-border);
+}
+
+.discovery-list-items a:first-child {
+  grid-column: 1/3;
+}
+.discovery-list-items a:nth-child(2) {
+  grid-column: 3/5;
 }
