--- a/coupang/style.css
+++ b/coupang/style.css
@@ -291,3 +291,42 @@ main img {
 .discovery-list-items a:nth-child(2) {
   grid-column: 3/5;
 }
+
+/* section : 카테고리별 추천 광고 상품 */
+
+.category-best h2 {
+  line-height: 1.5;
+}
+.category-best h2 span:first-child {
+  display: block;
+  font-size: 1rem;
+}
+
+.category-best h2 span:last-child {
+  color: var(--main-color);
+}
+.category-best-items {
+  background-color: #f373a2;
+  width: 100%;
+  height: 600px;
+  margin-bottom: 10px;
+}
+
+/* section: 카테고리별 추천 광고 상품 */
+.category-menu {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  border: var(--main-border);
+  top: 10px;
+  left: 205px;
+  display: none;
+}
+.category-menu a {
+  display: block;
+  padding: 10px 0;
+}
+.category-menu i {
+  font-size: 1.2rem;
+  text-align: center;
+}
