--- a/coupang/style.css
+++ b/coupang/style.css
@@ -98,6 +98,7 @@ header {
   overflow: hidden;
   position: relative;
   display: flex;
+  padding: 5px;
 }
 .header-main-bottom a {
   display: flex;
@@ -107,7 +108,7 @@ header {
   transition: 2s;
 }
 .header-main-bottom a.header-main-bottom-right {
-  transform: translateX(-375px);
+  transform: translateX(-385px);
 }
 .header-main-bottom img {
   width: 20px;
@@ -146,7 +147,7 @@ header {
   top: 121px;
   left: 0px;
   color: black;
-  /* display: none; */
+  display: none;
 }
 .category-btn:hover .category {
   display: block;
@@ -197,11 +198,9 @@ header {
   border: var(--main-border);
   display: none;
 }
-
 .category-sub-item ul {
   width: 156px;
 }
-
 .category-sub-item ul li {
   padding: 10px 0;
 }
@@ -215,7 +214,6 @@ header {
   right: 0;
   width: 465px;
 }
-
 .category-item:nth-child(2) .category-sub-item {
   top: -55px;
 }
@@ -237,14 +235,11 @@ header {
 .category-item:nth-child(8) .category-sub-item {
   top: -349px;
 }
-
 .category-item:nth-child(9) .category-sub-item {
   top: -398px;
 }
-
 .category-item:last-child .category-sub-item {
   top: -447px;
-  display: block;
 }
 
 /* main */
@@ -254,24 +249,21 @@ main img {
   height: 500px;
   object-fit: cover;
 }
-
 .main-img-active {
   display: block;
 }
 
-/* srection : 오늘의 발견 */
-.discovery-list h2 {
-  font-size: 1.2rem;
+/* section : 오늘의 발견 */
+section h2 {
+  font-size: 1.4rem;
   font-weight: bold;
   margin-top: 20px;
 }
-
 .discovery-list h2 span {
   font-size: 0.9rem;
-  font-weight: noraml;
+  font-weight: normal;
   color: #333;
 }
-
 .discovery-list-items {
   margin-top: 20px;
   display: grid;
@@ -280,20 +272,17 @@ main img {
   border: var(--main-border);
   padding: 10px;
 }
-
 .discovery-list-items a {
   border: var(--main-border);
 }
-
 .discovery-list-items a:first-child {
-  grid-column: 1/3;
+  grid-column: 1 / 3;
 }
 .discovery-list-items a:nth-child(2) {
-  grid-column: 3/5;
+  grid-column: 3 / 5;
 }
 
 /* section : 카테고리별 추천 광고 상품 */
-
 .category-best h2 {
   line-height: 1.5;
 }
@@ -301,7 +290,6 @@ main img {
   display: block;
   font-size: 1rem;
 }
-
 .category-best h2 span:last-child {
   color: var(--main-color);
 }
@@ -311,8 +299,7 @@ main img {
   height: 600px;
   margin-bottom: 10px;
 }
-
-/* section: 카테고리별 추천 광고 상품 */
+/* section : 카테고리별 추천 광고 상품 */
 .category-menu {
   display: flex;
   flex-direction: column;
@@ -328,5 +315,6 @@ main img {
 }
 .category-menu i {
   font-size: 1.2rem;
+  width: 40px;
   text-align: center;
 }
